--- a/skill.html
+++ b/skill.html
@@ -722,7 +722,11 @@
         max-height: 400px;
     }
 }
-
+@media (max-width:300) and (max-width: 768px) {
+    #reviews{
+        margin-top: -110px;
+    }
+}
 /* Custom Scrollbar for Reviews Display */
 .reviews-display::-webkit-scrollbar {
     width: 8px;
